fix clipping

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -96,6 +96,14 @@ body
     @extend .rounded
     margin-bottom: -1%
 
+.graffle-box.no-editing
+  margin-top: -30px
+
+.graffle-label
+  text-align: center
+  height: 20px
+  padding-top: 10px
+
 .rounded-border-box
   @extend .border-box
   @extend .rounded
@@ -110,7 +118,6 @@ body
     +border-radius(0px)
     border: none
     border-right: 1px solid white
-    margin-top: -130px
     margin-right: -2.56%
     min-width: 0px
 
@@ -121,26 +128,20 @@ body
 
   .graffle-box
     border: none
-    margin-top: -130px
     margin-left: -2.56%
     min-width: 0px
 
   svg
     @extend .rounded-top-right
 
-.graffle-label
-  text-align: center
-  height: 30px
-  padding-top: 10px
-
 .bottom-box
   .ipad-box
     width: 707px
-    height: 285px
+    height: 253px
 
   .graffle-box
     border: none
-    margin-top: -385px
+    margin-top: -353px
 
     svg
       @extend .rounded-bottom
@@ -151,13 +152,13 @@ body
 
   .graffle-preview
     @extend .rounded-border-box
+    margin-left: -2.56%
     min-width: 0px
 
 
   .graffle-box
     border: none
     min-width: 0px
-    margin-top: -100px
 
 .title
   text-align: center
